set(star_frontend_HEADERS
    StarActionBar.hpp
    StarAiInterface.hpp
    StarBaseScriptPane.hpp
    StarBindingsMenu.hpp
    StarBookmarkInterface.hpp
    StarChat.hpp
    StarCharCreation.hpp
    StarCharSelection.hpp
    StarChatBubbleSeparation.hpp
    StarChatBubbleManager.hpp
    StarCinematic.hpp
    StarClientCommandProcessor.hpp
    StarClipboardLuaBindings.hpp
    StarCodexInterface.hpp
    StarConfirmationDialog.hpp
    StarHttpTrustDialog.hpp
    StarContainerInterface.hpp
    StarContainerInteractor.hpp
    StarCraftingInterface.hpp
    StarErrorScreen.hpp
    StarGraphicsMenu.hpp
    StarInventory.hpp
    StarInterfaceCursor.hpp
    StarInterfaceLuaBindings.hpp
    StarItemTooltip.hpp
    StarJoinRequestDialog.hpp
    StarKeybindingsMenu.hpp
    StarMainInterface.hpp
    StarMainInterfaceTypes.hpp
    StarMainMixer.hpp
    StarMerchantInterface.hpp
    StarModsMenu.hpp
    StarNameplatePainter.hpp
    StarOptionsMenu.hpp
    StarPopupInterface.hpp
    StarQuestIndicatorPainter.hpp
    StarQuestInterface.hpp
    StarQuestTracker.hpp
    StarRadioMessagePopup.hpp
    StarTeamBar.hpp
    StarTitleScreen.hpp
    StarScriptPane.hpp
    StarSimpleTooltip.hpp
    StarSongbookInterface.hpp
    StarStatusPane.hpp
    StarShadersMenu.hpp
    StarTeleportDialog.hpp
    StarVoice.hpp
    StarVoiceLuaBindings.hpp
    StarVoiceSettingsMenu.hpp
    StarWireInterface.hpp
  )

set(star_frontend_SOURCES
    StarActionBar.cpp
    StarAiInterface.cpp
    StarBaseScriptPane.cpp
    StarBindingsMenu.cpp
    StarBookmarkInterface.cpp
    StarChat.cpp
    StarCharCreation.cpp
    StarCharSelection.cpp
    StarChatBubbleSeparation.cpp
    StarChatBubbleManager.cpp
    StarCinematic.cpp
    StarClientCommandProcessor.cpp
    StarClipboardLuaBindings.cpp
    StarCodexInterface.cpp
    StarConfirmationDialog.cpp
    StarHttpTrustDialog.cpp
    StarContainerInterface.cpp
    StarContainerInteractor.cpp
    StarCraftingInterface.cpp
    StarErrorScreen.cpp
    StarGraphicsMenu.cpp
    StarInventory.cpp
    StarInterfaceCursor.cpp
    StarInterfaceLuaBindings.cpp
    StarItemTooltip.cpp
    StarJoinRequestDialog.cpp
    StarKeybindingsMenu.cpp
    StarMainInterface.cpp
    StarMainInterfaceTypes.cpp
    StarMainMixer.cpp
    StarMerchantInterface.cpp
    StarModsMenu.cpp
    StarNameplatePainter.cpp
    StarOptionsMenu.cpp
    StarPopupInterface.cpp
    StarQuestIndicatorPainter.cpp
    StarQuestInterface.cpp
    StarQuestTracker.cpp
    StarRadioMessagePopup.cpp
    StarTeamBar.cpp
    StarTitleScreen.cpp
    StarScriptPane.cpp
    StarSimpleTooltip.cpp
    StarSongbookInterface.cpp
    StarStatusPane.cpp
    StarShadersMenu.cpp
    StarTeleportDialog.cpp
    StarVoice.cpp
    StarVoiceLuaBindings.cpp
    StarVoiceSettingsMenu.cpp
    StarWireInterface.cpp
  )

add_library(star_frontend OBJECT ${star_frontend_SOURCES} ${star_frontend_HEADERS})
target_compile_features(star_frontend PUBLIC cxx_std_20)
target_include_directories(star_frontend PUBLIC
    ${STAR_FRONTEND_INCLUDES}
    ${STAR_WINDOWING_INCLUDES}
    ${STAR_RENDERING_INCLUDES}
    ${STAR_APPLICATION_INCLUDES}
    ${STAR_PLATFORM_INCLUDES}
    ${STAR_GAME_INCLUDES}
    ${STAR_BASE_INCLUDES}
    ${STAR_CORE_INCLUDES}
    ${STAR_EXTERN_INCLUDES})
target_link_libraries(star_frontend PUBLIC star_build_definitions)

if(STAR_PRECOMPILED_HEADERS)
  target_precompile_headers(star_frontend REUSE_FROM star_core)
endif()
